--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>當SketchUp遇見Ruby<br />－邁向程式化建模之路</h2>
+        <h1>當SketchUp遇見Ruby</h1>
         <p></p>
 
 
