--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>當SektchUp遇見Ruby</title>
+    <title>Marco Test</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,11 +15,11 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>當SketchUp遇見Ruby</h1>
+        <h1>title placehole</h1>
         <p></p>
 
 
-        <p class="view">－邁向程式化建模之路 (碁峯出版)</p>
+        <p class="view">sub title</p>
 
       </header>
       <section>
